# examples

./: .gitignore  .gitmodules  README.md
rust/: Cargo.toml
rust/src/: main.rs  sign_order.rs  starkex_messages.rs
rust/src/pkg/: mod.rs
typescript/: .env.example  .gitignore  .prettierrc.mjs  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
typescript/src/: 01-create-limit-order.ts  02-create-market-order.ts  03-create-limit-order-with-partial-tpsl.ts  03-create-limit-order-with-tpsl.ts  04-create-partial-tpsl-order.ts  04-create-tpsl-order.ts  05-sub-accounts-transfer.ts  06-update-untriggered-position-tpsl.ts  07-create-limit-order-with-builder-id.ts  config.ts  init.ts
typescript/src/api/: account-info.schema.ts  account-info.ts  assets.schema.ts  assets.ts  axios.ts  fees.schema.ts  fees.ts  markets.schema.ts  markets.ts  open-orders.schema.ts  open-orders.ts  order.ts  orders.schema.ts  orders.ts  positions.schema.ts  positions.ts  starknet.schema.ts  starknet.ts  transfer.schema.ts  transfer.ts
typescript/src/models/: order-debugging-amounts.ts  order-settlement.ts  order-tp-sl-trigger.ts  order.test.ts  order.ts  order.types.ts  transfer-settlement.ts  transfer.ts  transfer.types.ts  types.ts
typescript/src/utils/: api.ts  check-required.ts  create-order-context.ts  generate-nonce.ts  get-account-by-id.ts  get-order-msg-hash.ts  get-random-int.ts  get-stark-public-key.ts  hex.ts  invariant.ts  json.ts  number.ts  omit-undefined.ts  round-to-min-change.ts  side.ts  sign-message.ts  wasm.ts  (+1 more)
(+11 files in other folders)
