[package]
name = "extended-examples-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto-lib-base = { version = "0.1.0", path = "./rust-crypto-lib-base" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", tag = "starknet/v0.17.0" }

chrono = "0.4.38"
hex = "0.4.3"
log = "0.4.22"
malachite = "0.4.16"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
simple_logger = "5.0.0"

starknet-crypto = "0.8.1"
starknet-types-core = "0.3.0"
